upd old entities + created new entities
