# docs/swagger.yaml
@@ -22,6 +22,46 @@ definitions:
         description: 'TODO: use decimal.Decimal instead of int'
         type: integer
     type: object
+  db.OfflineShops:
+    properties:
+      id:
+        type: string
+      location:
+        type: string
+      name:
+        type: string
+    type: object
+  db.Quest:
+    properties:
+      id:
+        type: string
+      is_done:
+        type: boolean
+      subquest_id:
+        type: string
+      user_id:
+        type: string
+    type: object
+  db.Subquest:
+    properties:
+      id:
+        type: string
+      is_done:
+        type: integer
+      reward:
+        type: integer
+      task_id:
+        type: string
+    type: object
+  db.Tasks:
+    properties:
+      description:
+        type: string
+      id:
+        type: string
+      name:
+        type: string
+    type: object
   server.ResponseHTTP:
     properties:
       data: {}
@@ -67,4 +107,408 @@ paths:
       summary: Creates a new gift.
       tags:
       - Gifts
+  /offline-shop/create:
+    post:
+      consumes:
+      - application/json
+      description: Принимает JSON тело запроса с полями Offline Shop и создает новый
+        Offline Shop
+      parameters:
+      - description: Create Offline Shop
+        in: body
+        name: OfflineShop
+        required: true
+        schema:
+          $ref: '#/definitions/db.OfflineShops'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/server.ResponseHTTP'
+            - properties:
+                data:
+                  $ref: '#/definitions/db.OfflineShops'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.ResponseHTTP'
+      summary: Создает новый Offline Shop
+      tags:
+      - Offline Shops
+  /offline-shop/delete/{id}:
+    delete:
+      description: Принимает ID офлайн магазина в URL и удаляет соответствующий офлайн
+        магазин
+      parameters:
+      - description: Offline Shop ID
+        in: path
+        name: id
+        required: true
+        type: string
+      responses:
+        "200":
+          description: Offline Shop deleted successfully
+          schema:
+            type: string
+        "404":
+          description: Offline Shop not found
+          schema:
+            type: string
+      summary: Удаляет существующий Offline Shop по ID
+      tags:
+      - Offline Shops
+  /offline-shop/update/{id}:
+    put:
+      consumes:
+      - application/json
+      description: Принимает JSON тело запроса с обновленными полями Offline Shop
+        и обновляет существующий Offline Shop по его ID
+      parameters:
+      - description: Offline Shop ID
+        in: path
+        name: id
+        required: true
+        type: string
+      - description: Update Offline Shop
+        in: body
+        name: OfflineShop
+        required: true
+        schema:
+          $ref: '#/definitions/db.OfflineShops'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/server.ResponseHTTP'
+            - properties:
+                data:
+                  $ref: '#/definitions/db.OfflineShops'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.ResponseHTTP'
+      summary: Обновляет существующий Offline Shop по ID
+      tags:
+      - Offline Shops
+  /quest/create:
+    post:
+      consumes:
+      - application/json
+      description: Принимает JSON тело запроса с полями Quest и создает новый Quest
+      parameters:
+      - description: Create Quest
+        in: body
+        name: Quest
+        required: true
+        schema:
+          $ref: '#/definitions/db.Quest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/server.ResponseHTTP'
+            - properties:
+                data:
+                  $ref: '#/definitions/db.Quest'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.ResponseHTTP'
+      summary: Создает новый Quest
+      tags:
+      - Quest
+  /quest/delete/{id}:
+    delete:
+      description: Принимает ID квеста в URL и удаляет соответствующий квест
+      parameters:
+      - description: Quest ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: Quest deleted successfully
+          schema:
+            type: string
+        "404":
+          description: Quest not found
+          schema:
+            type: string
+      summary: Удаляет существующий Quest по ID
+      tags:
+      - Quest
+  /quest/update:
+    put:
+      consumes:
+      - application/json
+      description: Принимает JSON тело запроса с обновленными полями Quest и обновляет
+        существующий Quest
+      parameters:
+      - description: Update Quest
+        in: body
+        name: Quest
+        required: true
+        schema:
+          $ref: '#/definitions/db.Quest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/server.ResponseHTTP'
+            - properties:
+                data:
+                  $ref: '#/definitions/db.Quest'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.ResponseHTTP'
+      summary: Обновляет существующий Quest
+      tags:
+      - Quest
+  /subquest/create:
+    post:
+      consumes:
+      - application/json
+      description: Принимает JSON тело запроса с полями Subquest и создает новый Subquest
+      parameters:
+      - description: Create Subquest
+        in: body
+        name: Subquest
+        required: true
+        schema:
+          $ref: '#/definitions/db.Subquest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/server.ResponseHTTP'
+            - properties:
+                data:
+                  $ref: '#/definitions/db.Subquest'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.ResponseHTTP'
+      summary: Создает новый Subquest
+      tags:
+      - Subquest
+  /subquest/delete/{id}:
+    delete:
+      description: Принимает ID подзадания в URL и удаляет соответствующее подзадание
+      parameters:
+      - description: Subquest ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: Subquest deleted successfully
+          schema:
+            type: string
+        "404":
+          description: Subquest not found
+          schema:
+            type: string
+      summary: Удаляет существующий Subquest по ID
+      tags:
+      - Subquest
+  /subquest/getmany:
+    get:
+      description: Возвращает список всех подзаданий (Subquest)
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/server.ResponseHTTP'
+            - properties:
+                data:
+                  $ref: '#/definitions/db.Subquest'
+              type: object
+      summary: Получает список Subquest
+      tags:
+      - Subquest
+  /subquest/getone/{id}:
+    get:
+      description: Возвращает информацию о конкретном подзадании (Subquest) по его
+        ID
+      parameters:
+      - description: Subquest ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/server.ResponseHTTP'
+            - properties:
+                data:
+                  $ref: '#/definitions/db.Subquest'
+              type: object
+        "404":
+          description: Subquest not found
+          schema:
+            type: string
+      summary: Получает одно Subquest по ID
+      tags:
+      - Subquest
+  /tasks/create:
+    post:
+      consumes:
+      - application/json
+      description: Принимает JSON тело запроса с полями Tasks и создает новое задание
+      parameters:
+      - description: Create Tasks
+        in: body
+        name: Tasks
+        required: true
+        schema:
+          $ref: '#/definitions/db.Tasks'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/server.ResponseHTTP'
+            - properties:
+                data:
+                  $ref: '#/definitions/db.Tasks'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.ResponseHTTP'
+      summary: Создает новое задание Tasks
+      tags:
+      - Tasks
+  /tasks/delete/{id}:
+    delete:
+      description: Принимает ID задания в URL и удаляет соответствующее задание
+      parameters:
+      - description: Tasks ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      responses:
+        "200":
+          description: Tasks deleted successfully
+          schema:
+            type: string
+        "404":
+          description: Tasks not found
+          schema:
+            type: string
+      summary: Удаляет существующее задание Tasks по ID
+      tags:
+      - Tasks
+  /tasks/getmany:
+    get:
+      description: Возвращает список всех заданий Tasks
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/server.ResponseHTTP'
+            - properties:
+                data:
+                  $ref: '#/definitions/db.Tasks'
+              type: object
+      summary: Получает список заданий Tasks
+      tags:
+      - Tasks
+  /tasks/getone/{id}:
+    get:
+      description: Возвращает информацию о конкретном задании Tasks по его ID
+      parameters:
+      - description: Tasks ID
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/server.ResponseHTTP'
+            - properties:
+                data:
+                  $ref: '#/definitions/db.Tasks'
+              type: object
+        "404":
+          description: Tasks not found
+          schema:
+            type: string
+      summary: Получает одно задание Tasks по ID
+      tags:
+      - Tasks
+  /tasks/update:
+    put:
+      consumes:
+      - application/json
+      description: Принимает JSON тело запроса с обновленными полями Tasks и обновляет
+        существующее задание
+      parameters:
+      - description: Update Tasks
+        in: body
+        name: Tasks
+        required: true
+        schema:
+          $ref: '#/definitions/db.Tasks'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/server.ResponseHTTP'
+            - properties:
+                data:
+                  $ref: '#/definitions/db.Tasks'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/server.ResponseHTTP'
+      summary: Обновляет существующее задание Tasks
+      tags:
+      - Tasks
 swagger: "2.0"
