# server/handlers.go
@@ -90,6 +90,17 @@ func updateGiftHandler(c *fiber.Ctx) error {
 	return c.SendString("Gift updated Succesfully")
 }
 
+// Step by step guide to authenticate a user:
+// 1. Create a middleware (attach to group of routes)
+// - Take session/jwt token from Authorization header
+// - Get user from session/jwt token (error if not found)
+// - Add user to context (c.Locals)
+// 2. Use middleware in routes
+// - Take user from context (c.Locals)
+// - Use user in handler
+// 3. Create a register & login handlers
+// - Register: add user to db, return session/jwt token
+// - Login: check user in db, return session/jwt token
 func superSecretHandler(c *fiber.Ctx) error {
 	user := c.Locals("user").(string)
 	return c.SendString("This is a super secret route. Hi " + user + "!")
@@ -111,4 +122,325 @@ func loginHandler(c *fiber.Ctx) error {
 	}
 
 	return c.JSON(AuthResponse{Session: session})
+}
+
+//Quest
+
+// createQuestHandler обрабатывает HTTP POST запросы на /quest/create.
+// @Summary Создает новый Quest
+// @Description Принимает JSON тело запроса с полями Quest и создает новый Quest
+// @Tags Quest
+// @Accept json
+// @Produce json
+// @Param Quest body db.Quest true "Create Quest"
+// @Success 200 {object} ResponseHTTP{data=db.Quest}
+// @Failure 400 {object} ResponseHTTP{}
+// @Router /quest/create [post]
+func createQuestHandler(c *fiber.Ctx) error {
+	var quest db.Quest
+	if err := c.BodyParser(&quest); err != nil {
+		return c.SendString(err.Error())
+	}
+
+	quest.ID = "quest_" + xid.New().String()
+
+	ok := db.CreateQuest(quest)
+	if !ok {
+		return c.SendString("Error in createQuest operation")
+	}
+
+	return c.JSON(quest)
+}
+
+// updateQuestHandler обрабатывает HTTP PUT запросы на /quest/update.
+// @Summary Обновляет существующий Quest
+// @Description Принимает JSON тело запроса с обновленными полями Quest и обновляет существующий Quest
+// @Tags Quest
+// @Accept json
+// @Produce json
+// @Param Quest body db.Quest true "Update Quest"
+// @Success 200 {object} ResponseHTTP{data=db.Quest}
+// @Failure 400 {object} ResponseHTTP{}
+// @Router /quest/update [put]
+func updateQuestHandler(c *fiber.Ctx) error {
+	var quest db.Quest
+	ok := db.UpdateQuest(quest)
+	if !ok {
+		return c.SendString("Error in updateQuest operation")
+	}
+	return c.SendString("Quest updated Succesfully")
+}
+
+// deleteQuestHandler обрабатывает HTTP DELETE запросы на /quest/delete/{id}.
+// @Summary Удаляет существующий Quest по ID
+// @Description Принимает ID квеста в URL и удаляет соответствующий квест
+// @Tags Quest
+// @Param id path int true "Quest ID"
+// @Success 200 {string} string "Quest deleted successfully"
+// @Failure 404 {string} string "Quest not found"
+// @Router /quest/delete/{id} [delete]
+func deleteQuestHandler(c *fiber.Ctx) error {
+	id := c.Params("id")
+
+	ok := db.DeleteQuest(id)
+	if !ok {
+		return c.SendString("Error in deleteQuest operation")
+	}
+	return c.SendString("Quest deleted successfully")
+}
+
+//Subquest
+
+// createSubquestHandler обрабатывает HTTP POST запросы на /subquest/create.
+// @Summary Создает новый Subquest
+// @Description Принимает JSON тело запроса с полями Subquest и создает новый Subquest
+// @Tags Subquest
+// @Accept json
+// @Produce json
+// @Param Subquest body db.Subquest true "Create Subquest"
+// @Success 200 {object} ResponseHTTP{data=db.Subquest}
+// @Failure 400 {object} ResponseHTTP{}
+// @Router /subquest/create [post]
+func createSubquestHandler(c *fiber.Ctx) error {
+	var subquest db.Subquest
+	if err := c.BodyParser(&subquest); err != nil {
+		return c.SendString(err.Error())
+	}
+
+	subquest.ID = "subquest_" + xid.New().String()
+
+	ok := db.CreateSubquest(subquest)
+	if !ok {
+		return c.SendString("Error in createSubquest operation")
+	}
+
+	return c.JSON(subquest)
+}
+
+// getManySubquestHandler обрабатывает HTTP GET запросы на /subquest/getmany.
+// @Summary Получает список Subquest
+// @Description Возвращает список всех подзаданий (Subquest)
+// @Tags Subquest
+// @Produce json
+// @Success 200 {object} ResponseHTTP{data=db.Subquest}
+// @Router /subquest/getmany [get]
+func getManySubquestHandler(c *fiber.Ctx) error {
+	var subquest db.Subquest
+	ok := db.FindManySubquest(subquest)
+	if !ok {
+		return c.SendString("Error in findManySubquest operation")
+	}
+	return c.SendString("Subquest Found Succesfully")
+}
+
+// getOneSubquestHandler обрабатывает HTTP GET запросы на /subquest/getone/{id}.
+// @Summary Получает одно Subquest по ID
+// @Description Возвращает информацию о конкретном подзадании (Subquest) по его ID
+// @Tags Subquest
+// @Param id path int true "Subquest ID"
+// @Produce json
+// @Success 200 {object} ResponseHTTP{data=db.Subquest}
+// @Failure 404 {string} string "Subquest not found"
+// @Router /subquest/getone/{id} [get]
+func getOneSubquestHandler(c *fiber.Ctx) error {
+	var subquest db.Subquest
+	ok := db.FindOneSubquest(subquest)
+	if !ok {
+		return c.SendString("Error in findOneSubquest operation")
+	}
+	return c.SendString("Subquest Found Succesfully")
+}
+
+// deleteSubquestHandler обрабатывает HTTP DELETE запросы на /subquest/delete/{id}.
+// @Summary Удаляет существующий Subquest по ID
+// @Description Принимает ID подзадания в URL и удаляет соответствующее подзадание
+// @Tags Subquest
+// @Param id path int true "Subquest ID"
+// @Success 200 {string} string "Subquest deleted successfully"
+// @Failure 404 {string} string "Subquest not found"
+// @Router /subquest/delete/{id} [delete]
+func deleteSubquestHandler(c *fiber.Ctx) error {
+	id := c.Params("id")
+
+	ok := db.DeleteSubquest(id)
+	if !ok {
+		return c.SendString("Error in deleteSubquest operation")
+	}
+	return c.SendString("Subquest deleted successfully")
+}
+
+//Tasks
+
+// createTasksHandler обрабатывает HTTP POST запросы на /tasks/create.
+// @Summary Создает новое задание Tasks
+// @Description Принимает JSON тело запроса с полями Tasks и создает новое задание
+// @Tags Tasks
+// @Accept json
+// @Produce json
+// @Param Tasks body db.Tasks true "Create Tasks"
+// @Success 200 {object} ResponseHTTP{data=db.Tasks}
+// @Failure 400 {object} ResponseHTTP{}
+// @Router /tasks/create [post]
+func createTasksHandler(c *fiber.Ctx) error {
+	var tasks db.Tasks
+	if err := c.BodyParser(&tasks); err != nil {
+		return c.SendString(err.Error())
+	}
+
+	if tasks.Name == "" {
+		return c.SendString("Name is required")
+	}
+
+	tasks.ID = "tasks_" + xid.New().String()
+
+	ok := db.CreateTasks(tasks)
+	if !ok {
+		return c.SendString("Error in createTasks operation")
+	}
+
+	return c.JSON(tasks)
+}
+
+// updateTasksHandler обрабатывает HTTP PUT запросы на /tasks/update.
+// @Summary Обновляет существующее задание Tasks
+// @Description Принимает JSON тело запроса с обновленными полями Tasks и обновляет существующее задание
+// @Tags Tasks
+// @Accept json
+// @Produce json
+// @Param Tasks body db.Tasks true "Update Tasks"
+// @Success 200 {object} ResponseHTTP{data=db.Tasks}
+// @Failure 400 {object} ResponseHTTP{}
+// @Router /tasks/update [put]
+func updateTasksHandler(c *fiber.Ctx) error {
+	var tasks db.Tasks
+	ok := db.UpdateTasks(tasks)
+	if !ok {
+		return c.SendString("Error in updateTasks operation")
+	}
+	return c.SendString("Tasks updated Succesfully")
+}
+
+// getOneTasksHandler обрабатывает HTTP GET запросы на /tasks/getone/{id}.
+// @Summary Получает одно задание Tasks по ID
+// @Description Возвращает информацию о конкретном задании Tasks по его ID
+// @Tags Tasks
+// @Param id path int true "Tasks ID"
+// @Produce json
+// @Success 200 {object} ResponseHTTP{data=db.Tasks}
+// @Failure 404 {string} string "Tasks not found"
+// @Router /tasks/getone/{id} [get]
+func getOneTasksHandler(c *fiber.Ctx) error {
+	var tasks db.Tasks
+	ok := db.FindOneTasks(tasks)
+	if !ok {
+		return c.SendString("Error in findOneTasks operation")
+	}
+	return c.SendString("Tasks Found Succesfully")
+}
+
+// getManyTasksHandler обрабатывает HTTP GET запросы на /tasks/getmany.
+// @Summary Получает список заданий Tasks
+// @Description Возвращает список всех заданий Tasks
+// @Tags Tasks
+// @Produce json
+// @Success 200 {object} ResponseHTTP{data=db.Tasks}
+// @Router /tasks/getmany [get]
+func getManyTasksHandler(c *fiber.Ctx) error {
+	var tasks db.Tasks
+	ok := db.FindManyTasks(tasks)
+	if !ok {
+		return c.SendString("Error in findManyTasks operation")
+	}
+	return c.SendString("Tasks Found Succesfully")
+}
+
+// deleteTasksHandler обрабатывает HTTP DELETE запросы на /tasks/delete/{id}.
+// @Summary Удаляет существующее задание Tasks по ID
+// @Description Принимает ID задания в URL и удаляет соответствующее задание
+// @Tags Tasks
+// @Param id path int true "Tasks ID"
+// @Success 200 {string} string "Tasks deleted successfully"
+// @Failure 404 {string} string "Tasks not found"
+// @Router /tasks/delete/{id} [delete]
+func deleteTasksHandler(c *fiber.Ctx) error {
+	id := c.Params("id")
+
+	ok := db.DeleteTasks(id)
+	if !ok {
+		return c.SendString("Error in deleteTasks operation")
+	}
+	return c.SendString("Tasks deleted successfully")
+}
+
+//OfflineShops
+
+// createOfflineShopHandler обрабатывает HTTP POST запросы на /offline-shop/create.
+// @Summary Создает новый Offline Shop
+// @Description Принимает JSON тело запроса с полями Offline Shop и создает новый Offline Shop
+// @Tags Offline Shops
+// @Accept json
+// @Produce json
+// @Param OfflineShop body db.OfflineShops true "Create Offline Shop"
+// @Success 200 {object} ResponseHTTP{data=db.OfflineShops}
+// @Failure 400 {object} ResponseHTTP{}
+// @Router /offline-shop/create [post]
+func createOfflineShopsHandler(c *fiber.Ctx) error {
+	var offlineshops db.OfflineShops
+	if err := c.BodyParser(&offlineshops); err != nil {
+		return c.SendString(err.Error())
+	}
+
+	if offlineshops.Name == "" {
+		return c.SendString("Name is required")
+	}
+	if offlineshops.Location == "" {
+		return c.SendString("Location is required")
+	}
+
+	offlineshops.ID = "offlineshops_" + xid.New().String()
+
+	ok := db.CreateOfflineShops(offlineshops)
+	if !ok {
+		return c.SendString("Error in createOfflineShops operation")
+	}
+
+	return c.JSON(offlineshops)
+}
+
+// updateOfflineShopHandler обрабатывает HTTP PUT запросы на /offline-shop/update/{id}.
+// @Summary Обновляет существующий Offline Shop по ID
+// @Description Принимает JSON тело запроса с обновленными полями Offline Shop и обновляет существующий Offline Shop по его ID
+// @Tags Offline Shops
+// @Accept json
+// @Produce json
+// @Param id path string true "Offline Shop ID"
+// @Param OfflineShop body db.OfflineShops true "Update Offline Shop"
+// @Success 200 {object} ResponseHTTP{data=db.OfflineShops}
+// @Failure 400 {object} ResponseHTTP{}
+// @Router /offline-shop/update/{id} [put]
+func updateOfflineShopsHandler(c *fiber.Ctx) error {
+	var offlineshops db.OfflineShops
+	ok := db.UpdateOfflineShops(offlineshops)
+	if !ok {
+		return c.SendString("Error in updateOfflineShops operation")
+	}
+	return c.SendString("OfflineShops updated Succesfully")
+}
+
+// deleteOfflineShopHandler обрабатывает HTTP DELETE запросы на /offline-shop/delete/{id}.
+// @Summary Удаляет существующий Offline Shop по ID
+// @Description Принимает ID офлайн магазина в URL и удаляет соответствующий офлайн магазин
+// @Tags Offline Shops
+// @Param id path string true "Offline Shop ID"
+// @Success 200 {string} string "Offline Shop deleted successfully"
+// @Failure 404 {string} string "Offline Shop not found"
+// @Router /offline-shop/delete/{id} [delete]
+func deleteOfflineShopsHandler(c *fiber.Ctx) error {
+	id := c.Params("id")
+
+	ok := db.DeleteOfflineShops(id)
+	if !ok {
+		return c.SendString("Error in deleteOfflineShops operation")
+	}
+	return c.SendString("OfflineShops deleted successfully")
 }
